--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Font Icons</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -17,6 +17,7 @@
                 <h2 class="text-primary">Font Icons</h2>
             </div>
         </div>
+        <!-- select -->
         <div class="row bg-primary">
             <div class="col p-5 d-flex justify-content-center">
 
@@ -31,41 +32,12 @@
             </div>
         </div>
     </div>
-    
+    <!-- container box Font Icons -->
     <div class="container">
         <div class="row justify-content-around">
 
-            <div class="col">
-                <div class="d-flex text-center align-items-center flex-column p-2">
-                    <i class="da inserire"></i>
-                    <p>da inserire</p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="d-flex text-center align-items-center flex-column p-2">
-                    <i class="da inserire"></i>
-                    <p>da inserire</p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="d-flex text-center align-items-center flex-column p-2">
-                    <i class="da inserire"></i>
-                    <p>da inserire</p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="d-flex text-center align-items-center flex-column p-2">
-                    <i class="da inserire"></i>
-                    <p>da inserire</p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="d-flex text-center align-items-center flex-column p-2">
-                    <i class="da inserire"></i>
-                    <p>da inserire</p>
-                </div>
-            </div>
             
+
         </div>
     </div>
 
