--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
     </div>
     <!-- container box Font Icons -->
     <div class="container">
-        <div class="row justify-content-around">
-
+        <div class="row-cols-5 d-flex flex-wrap" id="container-box">
             
-
         </div>
     </div>
 
