Modifiche estetiche in html e aggiunto type x bonu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row bg-primary">
             <div class="col p-5 d-flex justify-content-center">
 
-                <label for="fxtipo">Filtro per tipo: </label>
+                <label class="text-light me-2" for="fxtipo">FILTRO PER TIPO </label>
                 <select name="fxtipo" id="fxtipo">
                     <option value="tutti">Tutti</option>
                     <option value="vegetali">Vegetali</option>
@@ -35,7 +35,7 @@
     <!-- container box Font Icons -->
     <div class="container">
         <div class="row-cols-5 d-flex flex-wrap" id="container-box">
-            
+
         </div>
     </div>
 
