--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="text-primary">Font Icons</h2>
+                </div>
+            </div>
+            <!-- select -->
+            <div class="row bg-primary">
+                <div class="col p-5 d-flex justify-content-center">
     
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h2 class="text-primary">Font Icons</h2>
+                    <label class="text-light me-2" for="fxtipo">FILTRO PER TIPO </label>
+                    <select name="fxtipo" id="fxtipo">
+                        <option value="all">Tutti</option>
+                        <option value="vegetable">Vegetali</option>
+                        <option value="animal">Animali</option>
+                        <option value="user">Utenti</option>
+                    </select>
+    
+                </div>
             </div>
         </div>
-        <!-- select -->
-        <div class="row bg-primary">
-            <div class="col p-5 d-flex justify-content-center">
+    </header>
 
-                <label class="text-light me-2" for="fxtipo">FILTRO PER TIPO </label>
-                <select name="fxtipo" id="fxtipo">
-                    <option value="tutti">Tutti</option>
-                    <option value="vegetali">Vegetali</option>
-                    <option value="animali">Animali</option>
-                    <option value="utenti">Utenti</option>
-                </select>
 
-            </div>
-        </div>
-    </div>
     <!-- container box Font Icons -->
     <div class="container">
         <div class="row-cols-5 d-flex flex-wrap" id="container-box">
